adding organisation id

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-OPENAI_API_KEY = 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
+OPENAI_API_KEY = "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"
